main #1 wrap - https://github.com/Eight-Corner/campfire_web/issues/2

--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -209,15 +209,6 @@ $border-color: #e5e5e5; // border color 테두리 컬러
 
     }
   }
-  .search_btn{
-    font-size:18px; color:#fff; letter-spacing: -0.05em;
-    width: 90px;
-    background-color:#6f594c;
-    border-radius:10px; font-weight:700;
-    padding:10px 0;
-    height: 60pc;
-  }
-
   .one_center_btn{
     font-size:20px; color:#fff; letter-spacing: -0.05em;
     background-color:#6f594c; font-weight:500;
