--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -91,7 +91,9 @@
   padding: 50px 16px;
   background-color: #1b1b1b;
   color: #A5A5A5;
-
+  width: 100%;
+  //position : absolute;
+  //bottom: 0;
   .notice_line {
     height: 50px;
     display: flex;
