--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,3 +1,8 @@
+#main-wrapper {
+  height: auto;
+  min-height: 100%;
+}
+
 .home {
   width: 100%;
   //height: 1279px;
@@ -8,11 +13,12 @@
 
 #main_fullbg {
   background-image: url("./assets/image/main_bg_02.jpg");
+  //background-size: 100% 100%;
   background-size: cover;
   background-repeat: no-repeat;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: relative;
   background-color: #383943;
   min-height: 900px;
@@ -55,7 +61,7 @@
         line-height: 60px;
         margin-right: 10px;
         font-weight: 700;
-        background-color: #25a5f0;
+        background-color: #8859ff;
         color: #fff;
         cursor: pointer;
         .fa-angle-down:before {
@@ -151,4 +157,8 @@
       }
     }
   }
+}
+
+#content-wrap {
+  height: calc(100vh - 229px);
 }
